--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	</tr>
 	<tr>
 		<td> <img src="img/caballo.jpg" width="200" height="200"> </td>
-		<td> <img src="img/noche.jpg" width="200" height="200" > </td>
+		<td> <img src="img/Noche.jpg" width="200" height="200" > </td>
 		<td> <img src="img/pintor.jpg" width="200" height="200"> </td>
 	</tr>
 </table>
